--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
      "author": {
        "name": "Tarush J. Reddy"
     },
-    "publisher": "tarush",
+    "publisher": "tarushjreddy",
     "engines": {
         "vscode": "^1.55.0"
     },
@@ -18,6 +18,10 @@
         "developer king theme",
         "tarushjreddy theme"
     ],
+    "repository": {
+        "type":"git",
+        "url":"https://github.com/tarushjreddy/Developerking-Theme-vscode"
+    },
     "contributes": {
         "themes": [
             {
